config file edited

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,28 +14,43 @@ jobs:
       # documented at https://circleci.com/docs/2.0/circleci-images/
       # - image: circleci/postgres:9.4
 
-    working_directory: ~/repo
+    working_directory: ~/book-store
 
     environment:
       # Customize the JVM maximum heap limit
       MAVEN_OPTS: -Xmx3200m
 
     steps:
+      #git pull
       - checkout
+
+      #setup testing env
+#      - setup_remote_docker:
+#          docker_layer_caching: true
+#      - run:
+#          name: Login to DockerHub
+#          command: docker login -u $DOCKER_USER -p $DOCKER_PASS
+
 
       # Download and cache dependencies
       - restore_cache:
           keys:
-            - v1-dependencies-{{ checksum "pom.xml" }}
+            - book-store-{{ checksum "pom.xml" }}
             # fallback to using the latest cache if no exact match is found
-            - v1-dependencies-
+#            - book-store-
 
       - run: mvn dependency:go-offline
 
       - save_cache:
           paths:
             - ~/.m2
-          key: v1-dependencies-{{ checksum "pom.xml" }}
+          key: book-store-{{ checksum "pom.xml" }}
+
+      #package into jar
+      - run: mvn clean package
+
+      # build and push docker image to docker hub
+#      - run: mvn clean compile jib:build -Dimage=zarinlo/springboot-api:$CIRCLE_BUILD_NUM
 
       # run tests!
       - run: mvn integration-test
