added 2 more jobs

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,11 +52,11 @@ jobs:
       # build and push docker image to docker hub
 #      - run: mvn clean compile jib:build -Dimage=EhtiramA/springboot-api:$CIRCLE_BUILD_NUM
 
-      # run unit tests!
-      - run: mvn test
+#      # run unit tests!
+#      - run: mvn test
 
-      # run integration tests!
-      - run: mvn clean verify -P integration-test
+#      # run integration tests!
+#      - run: mvn clean verify -P integration-test
 
       - store_artifacts:
           path: target
@@ -68,3 +68,11 @@ jobs:
       - run:
           name: Send to CodeCov
           command: bash <(curl -s https://codecov.io/bash)
+
+  unit-test:
+    - run: mvn test
+
+
+  integration-test:
+    # run integration tests!
+    - run: mvn clean verify -P integration-test
