--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,9 +70,27 @@ jobs:
           command: bash <(curl -s https://codecov.io/bash)
 
   unit-test:
-    - run: mvn test
+    - docker:
+          # specify the version you desire here
+          - image: circleci/openjdk:11.0.3-jdk-stretch
+      # run integration tests!
+      steps:
+        - checkout
+        - run: mvn test
 
 
   integration-test:
-    # run integration tests!
-    - run: mvn clean verify -P integration-test
+    - docker:
+        # specify the version you desire here
+        - image: circleci/openjdk:11.0.3-jdk-stretch
+        # run integration tests!
+      steps:
+          - checkout
+          - run: mvn clean verify -P integration-test
+  workflows:
+    version: 2
+    build_and_test:
+      jobs:
+        - build
+        - unit-test
+        - integration-test
