--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -95,8 +95,9 @@ workflows:
   version: 2
   build_and_test:
     jobs:
-      - build
-      - unit-test
-      - integration-test
+      - build:
+          requires:
+            -unit-test
+            -integration-test
 
 
