added dependencies on jobs change order

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -102,7 +102,7 @@ workflows:
       - integration-test:
           requires:
             - build
-            - unit-test
+#            - unit-test
 
 
 #
