--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -93,7 +93,7 @@ jobs:
       - run: mvn clean verify -P integration-test
 
 orbs:
-  sonarcloud: sonarsource/sonarcloud@1.0.0
+  sonarcloud: "sonarsource/sonarcloud@1.0.0"
 workflows:
   version: 2
   build_and_test:
