--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@
 #
 version: 2.1
 orbs:
-  sonarcloud: "sonarsource/sonarcloud@1.0.0"
+  sonarcloud: sonarsource/sonarcloud@1.0.0
 jobs:
   build:
     docker:
