--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -95,8 +95,8 @@ workflows:
   version: 2
   build_and_test:
     jobs:
-      - build
-#          context: sonarcloud
+      - build:
+          context: SonarCloud
       - unit-test:
           requires:
             - build
