--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,12 @@
         <java.version>1.11</java.version>
     </properties>
 
+    <properties>
+        <sonar.projectKey>ehtiramabdullayev_BookStoreApi</sonar.projectKey>
+        <sonar.organization>ehtiramabdullayev</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+    </properties>
+
     <profiles>
         <!-- The Configuration of the development profile -->
         <profile>
