--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,7 @@
                             <goal>verify</goal>
                         </goals>
                         <configuration>
+<!--                            <groups>integration</groups>-->
                             <includes>
                                 <include>**/*Integration*.java</include>
                             </includes>
