changed structure of jobs in build

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,13 +44,13 @@ jobs:
           key: book-store-{{ checksum "pom.xml" }}
 
       #package into jar
-      - run: mvn clean -Dmaven.test.skip=true package
+      - run: mvn clean test package
 
       # build and push docker image to docker hub
       #      - run: mvn clean compile jib:build -Dimage=EhtiramA/springboot-api:$CIRCLE_BUILD_NUM
 
        # run unit tests!
-      - run: mvn test
+       #      - run: mvn test
 
       #      # run integration tests!
       #      - run: mvn clean verify -P integration-test
