Samar|Added swagger config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,4 @@ spring.datasource.data=classpath:data.sql
 spring.h2.console.enabled=true
 
 entityManager.packagesToScan=com.example.bookstore
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
